--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ h2 {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   margin-top: 50px;
+  align-items: stretch;
 }
 
 .advantage-column {
@@ -147,6 +148,7 @@ h2 {
 }
 
 .advantage-item {
+  min-height: 170px;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -266,11 +268,17 @@ h2 {
   transition: opacity 0.5s ease-in-out, height 0s 0s, padding 0.3s ease;
 }
 
+.line {
+  width: 90%;
+  height: 1px;
+  background: #ccc;
+}
+
 .form-container {
   width: 100%;
   max-width: 1240px;
   margin: 50px auto;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .form-and-image {
@@ -329,6 +337,7 @@ textarea {
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  margin-bottom: 10px;
 }
 
 .submit:hover {
@@ -435,6 +444,10 @@ textarea {
 
   .faq-answer {
     font-size: 14px;
+  }
+
+  .line {
+    width: 100%;
   }
 
   .form-container {
