--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -123,6 +127,25 @@ body {
   font-size: 1.5vw;
   max-width: 50%;
   padding: 50px 0;
+}
+
+.call-to-action {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 200px;
+  padding: 10px 20px;
+  background-color: #0056b3;
+  border: 1px solid #a3a3a3;
+  color: #ffffff;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.call-to-action:hover {
+  background-color: #004a99;
 }
 
 h2 {
@@ -289,7 +312,7 @@ h2 {
 
 .form-section {
   width: 50%;
-  padding: 15px 40px;
+  padding: 15px 20px;
   background-color: #f9f9f9;
 }
 
