--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,7 @@ body {
   gap: 10px;
   width: 200px;
   padding: 10px 20px;
-  background-color: #0056b3;
-  border: 1px solid #a3a3a3;
+  background-color: #0160c5;
   color: #ffffff;
   border-radius: 50px;
   cursor: pointer;
