--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ body {
   width: 200px;
   padding: 10px 20px;
   background-color: #0160c5;
+  border: 1px solid #ffffff;
   color: #ffffff;
   border-radius: 50px;
   cursor: pointer;
